...
    inputField(
        InputFieldData(
            value = password,
            onValueChange = onPasswordChange,
            keyboardOptions = KeyboardOptions(keyboardType = KeyboardType.Password),
            isPassword = true,
            testTag = "passwordInputField",
            maxLength = 30,
        )
    )
}

@Composable
...
                onClick = {
                    Log.d("Login", "Button clicked")
                    navController.navigate("home")
                },
                text = "Connexion",
                color = Main2,
                modifier = Modifier.testTag("loginButton")
            )
        )

        Spacer(modifier = Modifier.height(16.dp))
        secondaryButton(
            onClick = {
...
