...
) {
    if (inputFieldData.isPassword) {
        passwordVisibilityToggleIcon(
            showPassword = passwordVisible,
            onTogglePasswordVisibility = onTogglePasswordVisibility,
            iconColor = inputFieldData.borderColor,
            iconTestTag = if (passwordVisible) "hidePasswordIcon" else "showPasswordIcon"
        )
    } else if (inputFieldData.trailingIcon != null) {
        Icon(
            imageVector = inputFieldData.trailingIcon,
            contentDescription = "Custom icon",
            tint = inputFieldData.borderColor
...
